[package]
name = "cal-tea"
version = "0.1.0"
edition = "2021"
description = "Simple calendar CLI"
authors = ["0xmusashi <musashihp42@gmail.com>"]
license = "MIT"
repository = "https://github.com/0xmusashi/cal-tea"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
chrono = "0.4"
itertools = "0.10"
ansi_term = "0.12"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
